--- a/svc.bib
+++ b/svc.bib
@@ -554,7 +554,7 @@ language={English}
 @MISC{Marlow_haskell2010,
     author = {Simon Marlow},
     title = {Haskell 2010 Language Report},
-    year = {}
+    year = {2010}
 }
 
 @INPROCEEDINGS{Hudak07ahistory,
@@ -702,6 +702,7 @@ language={English}
   key = {GHC},
   title = {{G}lasgow {H}askell {C}ompiler - GHC},
   howpublished = {\url{https://www.haskell.org/ghc/}}
+  
 }
 
 @inproceedings{Yorgey12,
