Ale minor remarks

--- a/svc.bib
+++ b/svc.bib
@@ -388,10 +388,15 @@ language={English}
  keywords = {software merging, large-scale software development, merge conflicts, conflict detection, conflict resolution},
 } 
 
-@MISC{Lind01,
-    author = {Tancred Lindholm, Mervi Ranta},
-    title = {A 3-way Merging Algorithm for Synchronizing Ordered Trees - the 3DM merging and differencing tool for XML},
-    year = {2001}
+%crossref = {fc-doceng-2004},
+@inproceedings{Lind01,
+author = {Lindholm, Tancred},
+booktitle = {{ACM} Symposium on Document Engineering},
+title = {A Three-way Merge for {XML} Documents},
+pages = {1--10},
+url = {http://www.hiit.fi/files/fi/fc/papers/doceng04-pc.pdf},
+year = {2004},
+fubdummy = {}
 }
 
 @inproceedings{Lind04,
@@ -410,12 +415,17 @@ language={English}
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {XML, collaborative editing, conflict, structured text, three-way merge},
-} 
+}
 
-@MISC{Lind05,
-    author = {Tancred Lindholm and Torsten Rueger},
-    title = {A Fault-Tolerant Three-Way Merge For XML And HTML},
-    year = {2005}
+%crossref = {fc-euroimsa-2005},
+@inproceedings{Lind05,
+author = {Lindholm, Tancred and Rüger, Torsten},
+booktitle = {Proceedings of the Ninth {IASTED} International Conference on Internet and Multimedia Systems and Applications},
+title = {A Fault-tolerant Three-way Merge for {XML} and {HTML}},
+pages = {71--76},
+url = {http://www.hiit.fi/files/fi/fc/papers/ctl-euroIMSA.pdf},
+year = {2005},
+fubdummy = {}
 }
 
 @article{Chawathe96,
@@ -543,9 +553,14 @@ language={English}
 
 @MISC{PetersSurvey,
     author = {Luuk Peters},
-    title = {Change Detection in XML Trees: a Survey},
-    year = {}
+    title = {Change Detection in XML Trees: A Survey},
+    booktitle = {In 3rd Twente Student Conference on IT},
+    institution = {University of Twente},
+    address = {Faculty of Electrical Engineering, Mathematics, and Computer Science},
+    month = {June},
+    year = {2005}
 }
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Haskell
