--- a/main.tex
+++ b/main.tex
@@ -116,30 +116,34 @@
 \maketitle
 
 \begin{abstract}
-\todo{190 words: too long? Should I aim for 150-170?}
-  The UNIX \texttt{diff3} program automatically merges two text
-  files, given a common base version, comparing them line by line and
-  raising conflicts when the changes are irreconcilable.
+  \todo{190 words: too long? Should I aim for 150-170?}  
+  %
+  Many VCS systems, including Git and Mercurial, relies on
+  \texttt{diff3} to merge different revisions of the same file.
+  %
+  More precisely \texttt{diff3} automatically merges two text files,
+  given a common base version, comparing them line by line and raising
+  conflicts when the changes made are irreconcilable.
   %
   The program ignores the actual structure of the data stored in the
   files, hence it might generate spurious conflicts that must be
   manually resolved by the user.
   %
-  In this paper we present a state-based, three-way, persistent,
+  In this paper, we present a state-based, three-way, persistent,
   data-type generic \texttt{diff3} algorithm whose increased precision
-  reduces the number of false conflicts raised and improves its
-  merging capabilities.
+  in detecting changes reduces the number of false conflicts raised
+  and improves its merging capabilities.
   %
   We have implemented the algorithm in Agda, a proof assistant with
-  dependent types, and developed a model to reason about diffing and
-  merging.
+  dependent types, and developed a model to reason about ``diffing''
+  and merging.
   %
   \todo{Too many details? More motivation?}
   We have established that the algorithm fulfills its specification
   and proved that it is correct with respect to some safety
   properties.
   %
-  Furthermore we have identified the minimal conditions under which
+  Furthermore, we have identified the minimal conditions under which
   the merging algorithm raises a conflict and established a structural
   invariant preserved.
   %
@@ -160,18 +164,39 @@ Algorithms,
 Diff3, Dependent types, Datatype-generic programming
 
 \section{Introduction}
-Version control systems (VCS) such as Git \cite{Git} and Mercurial \cite{Mercurial}
-are used in the software industry, as well as in the open source community and by researchers all over the world to develop software.
-These tools track all the changes in the source code throughout its development, making it possible to quickly roll back to any previous version. Furthermore developers can simultaneously work on the same project and use a VCS to merge their changes together.
-VCS provides these features by means of two algorithms, called \texttt{diff} and \texttt{diff3}.
-The former detects changes in source code files, while the latter merges independent changes made to the code base, allowing simultaneous development.
-These algorithms are line-based, they compare files line by line, and can be used not only on software artifacts, but with any text-based file. 
-Unfortunately their fixed-granularity limit their precision when detecting changes and deteriorate their merging capabilities. In this paper we develop a data-type generic version of the \texttt{diff} and \texttt{diff3} algorithms, that improve their precision and applicability.
+Version control systems (VCS) such as Git \cite{Git} and Mercurial
+\cite{Mercurial} are used in the software industry, as well as in the
+open source community and by researchers all over the world to develop
+software.  These tools track all the changes in the source code
+throughout its development, making it possible to quickly roll back to
+any previous version.
+%
+Furthermore, developers can simultaneously work on the same project and
+use a VCS to merge their changes together.
+%
+VCS provides these features by means of two algorithms, called
+\texttt{diff} and \texttt{diff3}.
+%
+The former detects changes in source code files, while the latter
+merges independent changes made to the code base, allowing
+simultaneous development.
+%
+These algorithms are line-based, i.e.\ they compare files line by
+line, and not only can be used on software artifacts, but also with
+any text-based file.
+%
+Unfortunately, their line-granularity limits their precision when
+detecting changes, which consequently deteriorates their merging
+capabilities.
+%
+In this paper, we develop a data-type generic version of the
+\texttt{diff} and \texttt{diff3} algorithms, that improve their
+precision and applicability.
 
 \paragraph{Example}
 We show the shortcomings of the line-based \texttt{diff} and \texttt{diff3} algorithms by means of an example.
 The Comma Separated Values file format (CSV) is a simple text-based encoding of data stored in tables. %b \cite{csv}.
-In a CSV file every line represents a row of the table and within each row commas separate values in different columns.
+In a CSV file, every line represents a row of the table and within each row commas separate values in different columns.
 For instance the file \texttt{a.csv} encodes a $3 \times 3$ table containing numbers from 1 to 9.
 \begin{figure}[!h]
 \centering
@@ -244,11 +269,23 @@ The second user changes some values in the third column and saves the new table 
 \end{minipage}%
 \end{figure}
 
-The two users would like to synchronize their work now and decide to use 
-\texttt{diff3} to merge their versions. They have modified \emph{independent} parts of the table, therefore they are confident that it is should be possible to automatically merge the changes, without incurring in a conflict.
-Unfortunately \texttt{diff3} is a line-based algorithm therefore it compares files line by line, without considering the actual structure of the data stored in the files. As a result the algorithm fails to merge the two tables and raises spurious conflicts.
-
-In particular \texttt{diff3} employs the \emph{three-way-merge} technique to compare and merge the corresponding lines of three files. The following table shows the result of applying this technique to the previous tables:
+The two users would like to synchronize their work now and decide to
+use \texttt{diff3} to merge their versions.
+%
+They have modified \emph{independent} parts of the table, therefore
+they are confident that it is should be possible to automatically
+merge the changes, without incurring in a conflict.
+%
+Unfortunately \texttt{diff3} is a line-based algorithm which compares
+files line by line, without considering the actual structure of the
+data stored in the files. As a result the algorithm fails to merge the
+two tables and raises spurious conflicts.
+%
+In particular \texttt{diff3} employs the \emph{three-way-merge}
+technique to compare and merge the corresponding lines of three files.
+%
+The following table shows the result of applying this technique to the
+previous tables:
 \begin{center}
 \begin{tabular}{| c | c | c | c |}
 \hline
@@ -280,19 +317,19 @@ If \texttt{diff} and \texttt{diff3} were aware of the table structure, consistin
 \subsection{Contributions}
 In this paper we make the following contributions:
 \begin{itemize}
-\item In section \ref{subsec:edit-script} we define a type-safe edit script data 
+\item In Section \ref{subsec:edit-script}, we define a type-safe edit script data 
       type that supports \emph{delete}, \emph{insert} and \emph{update} edits and 
       that represents the differences between two objects. In section 
       \ref{subsec:diff-algo} we give the formal specifications of a \texttt{diff} 
       algorithm in terms of the edit script data type.
-\item In section \ref{subsec:merge-semantics} we formalize the 
+\item In Section \ref{subsec:merge-semantics}, we formalize the 
       \emph{three-way-merge} strategy and give a precise semantics of 
       \emph{mergeable} and \emph{conflicting} edits. We give 
       the formal specifications of a \texttt{diff3} algorithm in terms of our edit 
       semantics. 
-\item In section \ref{subsec:diff3-algo} we show a data-type generic, three-way 
+\item In Section \ref{subsec:diff3-algo}, we show a data-type generic, three-way 
       \texttt{diff3} algorithm that satisfy our specifications and we study its 
-      formal properties in section \ref{sec:properties}.
+      formal properties in Section \ref{sec:properties}.
 \end{itemize}
 We have implemented these algorithms using generic programming
 techniques in Agda \cite{Bove09}, a programming language with dependent
@@ -304,7 +341,7 @@ properties.
 We have then put our model into practice by efficiently implementing
 our algorithms in Haskell \cite{Marlow_haskell2010}.
 %
-In section \ref{sec:haskell} we point out the shortcomings and
+In Section \ref{sec:haskell}, we point out the shortcomings and
 compromises that we had to make when moving from a language with 
 dependent types to a less expressive one.
 %
@@ -315,7 +352,7 @@ sake of presentation we have simplified the code presented in this
 paper, for instance by hiding implicit arguments and universe levels.
 
 \section{Universe}
-In order to implement data type generic algorithms we need a generic
+In order to implement data type generic algorithms, we need a generic
 representation of algebraic data types.
 %
 The universe used in this paper consists of typed heterogeneous rose
@@ -324,27 +361,33 @@ trees whose \emph{nodes} correspond to data type constructors and
 their children to their fields.
 \begin{minted}{agda}
   data HTree : Set → Set where
-    Node : F as a → HList as → HTree a
+    Node : C as a → HList as → HTree a
 
   data HList : List Set → Set where
     [] : HList []
    _∷_ : HTree a → HList as → HList (a ∷ as)
 \end{minted}
-	The type \texttt{F as a} denotes the constructor of an algebraic data
-	type of type \texttt{a} that takes arguments of types determined by the list 
-	\texttt{as}.
-        %
-        This representation is type-safe because the constructor
-        \texttt{Node} requires the same types \texttt{as} in the
-        fields types and in the list of subtrees, hence it forms a
-        well-typed application of a constructor to its arguments.
-        %
-	We will show in section \ref{sec:haskell} how to instantiate \texttt{F} with concrete 
-        data types. In the model we will just leave it abstract as a module parameter.
-        We furthermore assume an equality operator for it.
+Data type \texttt{HList as} is an \emph{heterogeneous} list-like data
+structure, because contains trees of different types, namely those
+specified by the list of types \texttt{as}.
+  %
+  The type \texttt{C as a} denotes the constructor of an algebraic
+  data type of type \texttt{a} that takes arguments of types
+  determined by the list \texttt{as}.
+  %
+  This representation is type-safe because the constructor
+  \texttt{Node} requires the same types \texttt{as} in the fields
+  types and in the list of subtrees, hence it forms a well-typed
+  application of a constructor to its arguments.
+  % 
+  We will show in Section \ref{sec:haskell} how to instantiate
+  \texttt{C} with concrete data types. In the model we will just leave
+  it abstract as a module parameter.  We furthermore assume an
+  equality operator for it.
+
 \begin{minted}{agda}
-module Diff3 (F : List Set → Set → Set) 
-              (_≟_ : (α : F as a) (β : F bs b) → Dec (α ≡ β)) where
+module Diff3 (C : List Set → Set → Set) 
+              (_≟_ : (α : C as a) (β : C bs b) → Dec (α ≡ β)) where
 \end{minted}
 	
         \paragraph{Example} 
@@ -353,11 +396,11 @@ module Diff3 (F : List Set → Set → Set)
 hs : HList [List Int]
 hs = Node (\textcolor{blue}{::}) [Node \textcolor{magenta}{1} [], Node (\textcolor{blue}{::}) [Node \textcolor{magenta}{2} [], Node \textcolor{blue}{[]} []]]
 \end{Verbatim}
-        Where \texttt{(\textcolor{blue}{::}) : F [Int, List Int] (List Int)}
-        and \texttt{\textcolor{blue}{[]} : F [] (List Int)} are the reification of respectively the cons constructor and the
+        Where \texttt{(\textcolor{blue}{::}) : C [Int, List Int] (List Int)}
+        and \texttt{\textcolor{blue}{[]} : C [] (List Int)} are the reification of respectively the cons constructor and the
         empty list constructor, specialized without loss of generality to the type \texttt{List Int}.
         Similarly in our examples we will automatically lift numbers to node constructors, that is
-        \texttt{\textcolor{magenta}{1}, \textcolor{magenta}{2} : F [] [Int]}.
+        \texttt{\textcolor{magenta}{1}, \textcolor{magenta}{2} : C [] Int}.
 
 	In the following we will use two auxiliary functions to append and split 
 	heterogeneous lists:
@@ -376,31 +419,31 @@ hsplit : HList (as ++ bs) → HList as × HList bs
 	\subsection{Edit Operations}
 	Single edits are defined over \emph{values}, which denote either the presence or 
 	the absence of a node.
-        At first we might try to define them as a maybe value:
+        At first, we might try to define them as a maybe value:
 \begin{minted}{agda}
 Val : List Set → Set → Set
-Val as a = Maybe (F as a)
+Val as a = Maybe (C as a)
 \end{minted}
         In the type \texttt{Val as a} the parameters \texttt{as} and \texttt{a} 
-        witness the possible presence of a node \texttt{F as a}, that given objects 
+        witness the possible presence of a node \texttt{C as a}, that given objects 
         of types \texttt{as} will produce an object of type \texttt{a}.
         The drawback of this encoding is that \texttt{as} and \texttt{a} are 
         valid input and output approximations only if a node is in fact present.
-        An indexed data type on the other hand can give a much more accurate
+        An indexed data type on the other hand, can give a much more accurate
         approximation:
 \begin{minted}{agda}
 data Val : List Set → List Set → Set where
   ⊥ : Val [] []
-  ⟨_⟩ : F as a → Val as [ a ] 
+  ⟨_⟩ : C as a → Val as [ a ] 
 \end{minted}
         The data type \texttt{Val as bs} is indexed by two lists \texttt{as} and 
         \texttt{bs} that assume only certain values, depending on the presence
         of a node. This definition ensures that for any value \texttt{Val as bs}, 
         the lists \texttt{as} and \texttt{bs} always accurately approximate inputs 
         and outputs regardless of the presence of a node.
-	Namely an empty value will consume no input and produce nothing, hence
+	Namely, an empty value will consume no input and produce nothing, hence
         both lists are empty.
-        A non-empty value contains a node \texttt{F as a} which consumes 
+        A non-empty value contains a node \texttt{C as a} which consumes 
         objects of types \texttt{as} and produces a single object of type \texttt{a}.
 
 	The set of edit operations considered includes a no-operation, node 
@@ -408,9 +451,9 @@ data Val : List Set → List Set → Set where
 \begin{minted}{agda}
 data _⟿_ : Val as bs → Val cs ds → Set where
   Nop : ⊥ ⟿ ⊥
-  Del : (α : F as a) → ⟨ α ⟩ ⟿ ⊥
-  Ins : (α : F as a) → ⊥ ⟿ ⟨ α ⟩
-  Upd : (α : F as a) (β : F bs a) → ⟨ α ⟩ ⟿ ⟨ β ⟩
+  Del : (α : C as a) → ⟨ α ⟩ ⟿ ⊥
+  Ins : (α : C as a) → ⊥ ⟿ ⟨ α ⟩
+  Upd : (α : C as a) (β : C bs a) → ⟨ α ⟩ ⟿ ⟨ β ⟩
 \end{minted}
 	Edits are indexed by two values, called respectively 
 	\emph{source} and \emph{target} values. The \texttt{Nop} edit is 
@@ -504,7 +547,7 @@ satisfy some basic requirements.
   \label{req:diff-specs}
   A \texttt{diff} algorithm is correct if and only if for any list
   \texttt{x} and \texttt{y}
-  \center{\texttt{e = diff x y ⇔ ⟪ e ⟫ ≡ ∧ ⟦ e ⟧ ≡ y}}
+  \center{\texttt{e = diff x y ⇔ x ≡ ⟪ e ⟫ ∧ y ≡ ⟦ e ⟧}}
 \end{req}
 %
 This correctness criterion demands that the edit script computed by
@@ -542,7 +585,7 @@ Let \texttt{x} and \texttt{y} be heterogeneous lists and \texttt{e} an edit scri
 
 	In our implementation the \texttt{diff} algorithm employed is a 
         generalization of that proposed by Lempsink et al.\ \cite{Lemp09},
-        which will be discussed in section \ref{sec:related-work}.
+        which will be discussed in Section \ref{sec:related-work}.
         We remark that we have proved that it 
 	complies with the \texttt{Diff} specification:
 \begin{minted} {agda}
@@ -559,7 +602,7 @@ diff-suff :  (x : HList xs) (y : HList ys) → Diff x y (diff x y)
 	It then merges the edits contained in the two edit scripts and produce
 	an edit script, whose \emph{source} is the base object and whose 
 	\emph{target} is the merged object.
-	Nevertheless not all edits can be automatically reconciled.
+	Nevertheless, not all edits can be automatically reconciled.
 	In these cases a conflict is detected and reported to the user, who has
 	to solve it manually.
 		
@@ -572,9 +615,9 @@ diff-suff :  (x : HList xs) (y : HList ys) → Diff x y (diff x y)
 	if all of them are different a conflict is detected, 
         otherwise the version that changed from base is chosen.
 	
-	To put this strategy on a formal footing we give precise definitions
+	To put this strategy on a formal footing, we give precise definitions
 	of corresponding parts and conflicts.
-	On top of these we define a sound merging semantics.
+	On top of these, we define a sound merging semantics.
 
 	\subsection{Alignment}
         \label{subsec:alignment}
@@ -590,7 +633,7 @@ diff-suff :  (x : HList xs) (y : HList ys) → Diff x y (diff x y)
 \begin{minted}{agda}
 data _⋎_ : ES as bs → ES as cs → Set where
   nil : [] ⋎ []
-  cons : (f : u ⟿ v) (g : u ⟿ w) → e₁ ⋎ e₂ → f ∷ e₁ ⋎ g ∷ e₂ 
+  cons : (f : u ⟿ v) (g : u ⟿ w) → e₁ ⋎ e₂ → (f ∷ e₁) ⋎ (g ∷ e₂)
 \end{minted}
 	The definition is recursive: two edit scripts are aligned if
         either they are both empty or their heads and their tails are
@@ -600,15 +643,15 @@ data _⋎_ : ES as bs → ES as cs → Set where
         alignment since this property can be enforced directly with
         their types.
         %
-	For example the \texttt{cons} constructor accepts only aligned
+	For example, the \texttt{cons} constructor accepts only aligned
         edits because it requires them to have the same source value
         \texttt{u}.
 	
-        Intuitively two edit scripts that have the same \emph{source}
+        Intuitively, two edit scripts that have the same \emph{source}
         object can be aligned, because they share the same collection
         of \emph{source} nodes.
         %
-        However insert edits might break alignment because they can
+        However, insert edits might break alignment because they can
         occur at different point in the scripts.
 
         \paragraph{Example}
@@ -694,7 +737,7 @@ data _⊔_↧_ : (v ⟿ a) → (v ⟿ b) → (v ⟿ c) → Set where
 	Observe that the type of the two input edits guarantees their
         alignment.
         %
-        Furthermore determines only the \emph{target} value, hence the
+        Furthermore, determines only the \emph{target} value, hence the
         third merged edit retain the the same source value \texttt{v}.
 
 	Each constructor represents a distinct axiom that justifies why
@@ -720,10 +763,10 @@ data _⊔_↧_ : (v ⟿ a) → (v ⟿ b) → (v ⟿ c) → Set where
 	
 \begin{minted}{agda}
 data Conflict : Val as bs → Val cs ds → Val es fs → Set where
-  DelUpd : (α : F as a) (β : F bs a) → Conflict ⟨ α ⟩ ⊥ ⟨ β ⟩
-  UpdDel : (α : F as a) (β : F bs a) → Conflict ⟨ α ⟩ ⟨ β ⟩ ⊥ 
-  InsIns : (α : F as a) (β : F bs b) → Conflict ⊥ ⟨ α ⟩ ⟨ β ⟩
-  UpdUpd : (α : F as a) (β : F bs a) (γ : F cs a) →
+  DelUpd : (α : C as a) (β : C bs a) → Conflict ⟨ α ⟩ ⊥ ⟨ β ⟩
+  UpdDel : (α : C as a) (β : C bs a) → Conflict ⟨ α ⟩ ⟨ β ⟩ ⊥ 
+  InsIns : (α : C as a) (β : C bs b) → Conflict ⊥ ⟨ α ⟩ ⟨ β ⟩
+  UpdUpd : (α : C as a) (β : C bs a) (γ : C cs a) →
              Conflict ⟨ α ⟩ ⟨ β ⟩ ⟨ γ ⟩    
 \end{minted}
 
@@ -768,7 +811,7 @@ data _⊔_↥_ : (u ⟿ v) → (u ⟿ w) → Conflict u v w → Set where
         We now show some fundamental properties of our merge semantics that
         will be handy in our formalization.
         %
-        Firstly we prove that the semantics is sound, that is
+        Firstly, we prove that the semantics is sound, that is
         merge and conflicts are mutually exclusive.
         \begin{prop}[Mutually Exclusive]
           \label{prop:mutually-exclusive}
@@ -846,9 +889,9 @@ _⊔_ : (f : u ⟿ v) (g : u ⟿ w) →
 	\paragraph{Merged Edit Script}
 	Just like we defined a merge operator for aligned edits, we need to 
 	define a similar operator for aligned edit scripts.
-	However since single merges may fail this operator cannot return 
+	However, since single merges may fail this operator cannot return 
 	the same well-typed edit script, that we have defined before.
-	Therefore we introduce an alternative edit script, which is only partially 
+	Therefore, we introduce an alternative edit script, which is only partially 
 	well-typed and that can include conflicts.
 \begin{minted}{agda}
 data ES₃ : List Set → Set where
@@ -858,7 +901,7 @@ data ES₃ : List Set → Set where
              ES₃ (as ++ xs) → ES₃ (bs ++ xs)
 \end{minted}
 	The data type is indexed only by the source type list and it is well-typed
-	only with respect to it. Furthermore it provides an additional constructor
+	only with respect to it. Furthermore, it provides an additional constructor
 	for conflicts. 
 
         \subsection{Diff$_3$ Algorithm}
@@ -886,7 +929,7 @@ _⊔₃_  _ _ {{p}} = merge₃ p
         special  type  of  implicit arguments  that  is  automatically
         resolved at call-sites \cite{Devriese11}.
 
-        In order to reason about merging we encode the specifications
+        In order to reason about merging, we encode the specifications
         of the merge operator in data type \texttt{Merge₃}:
 
 % \begin{figure*}[t!]
@@ -978,7 +1021,7 @@ e₃ = [Ins [], Ins []]
           \and
           \inferrule
           {\texttt{f : v \textasciitilde> w} \\ 
-           \texttt{w : F cs ds} \\
+           \texttt{w : C cs ds} \\
            \texttt{e ⇓ cs ++ ys}}
           {\texttt{f ∷ e ⇓ (ds ++ ys)}}
         \end{mathpar}
@@ -999,14 +1042,14 @@ In this section we present several properties of our merge algorithm,
 all of which have been verified in Agda using the model presented in
 this paper.  
 %
-In the following we will write \texttt{f ∈ e} to denote that edit
+In the following, we will write \texttt{f ∈ e} to denote that edit
 \texttt{f} occurs in script \texttt{e}.
 %
 Furthermore We generalize membership to conflicts \texttt{c ∈ e} and
 to nodes in heterogeneous lists \texttt{α ∈ hs}.
   
     \subsection{Conflict}  
-    In order to reason about complex merge operations we have studied
+    In order to reason about complex merge operations, we have studied
     what are the minimal conditions that will trigger a conflict.
     %
     Merging two scripts will result in a conflict if they contain at
@@ -1082,8 +1125,8 @@ data _⊔₃_↥_ : ES xs ys → ES xs zs → Conflict u v w → Set where
 %     in the list of trees \texttt{hs}.
 
 % \begin{minted}{agda}
-% data _∈_ : F xs a → HList ys → Set where
-%   here : (α : F as a) → α ∈ Node α hs₁ ∷ hs₂
+% data _∈_ : C xs a → HList ys → Set where
+%   here : (α : C as a) → α ∈ Node α hs₁ ∷ hs₂
 %   there : α ∈ (hs₁ +++ hs₂) → α ∈ Node β hs₁ ∷ hs₂
 % \end{minted}
 
@@ -1117,18 +1160,18 @@ In other words the source function \texttt{⟪\_⟫} and target function
 \begin{prop}[\texttt{⟪\_⟫} and \texttt{⟦\_⟧} are correct]
 \label{prop:source-target-cmp}
 Given an edit script \texttt{e} and a node \texttt{α} then.
-If \texttt{e ⊢ₑ ⟨ α ⟩ ⟿ v} then \texttt{α ∈ ⟪ e ⟫}.
-Similarly if \texttt{e ⊢ₑ v ⟿ ⟨ α ⟩} then \texttt{α ∈ ⟦ e ⟧}.
+If \texttt{e ⊢ ⟨ α ⟩ ⟿ v} then \texttt{α ∈ ⟪ e ⟫}.
+Similarly if \texttt{e ⊢ v ⟿ ⟨ α ⟩} then \texttt{α ∈ ⟦ e ⟧}.
 \end{prop}
 
 We now formally state the \emph{data origin} property.
 \todo{Here I am assuming a diff that satisfies our specification. Is it clear?}
-\begin{cor}[Data Origin]
+\begin{prop}[Data Origin]
 Let \texttt{x} and \texttt{y} be two heterogeneous lists, let \texttt{e = diff x y}
 and let \texttt{α} be a node.
-If \texttt{e ⊢ₑ ⟨ α ⟩ ⟿ v} then \texttt{α ∈ x}. Similarly if \texttt{e ⊢ₑ v ⟿ ⟨ α ⟩}
+If \texttt{e ⊢ ⟨ α ⟩ ⟿ v} then \texttt{α ∈ x}. Similarly if \texttt{e ⊢ v ⟿ ⟨ α ⟩}
 then \texttt{α ∈ y}.
-\end{cor}    
+\end{prop}    
 \begin{proof}
   It follows directly from Requirement \ref{req:diff-specs} and Proposition
   \ref{prop:diff-correct} (requirements and specifications of
@@ -1142,10 +1185,10 @@ We now formally state the \emph{data retention} property.
   \texttt{e = diff x y} and let \texttt{α} be a node.
 %
   If \texttt{α ∈ x} then there is a target value \texttt{v} such that
-  \texttt{e ⊢ₑ ⟨ α ⟩ ⟿ v}.
+  \texttt{e ⊢ ⟨ α ⟩ ⟿ v}.
 %
   Similarly if \texttt{α ∈ y} then there is a source value \texttt{v} such that
-  \texttt{e ⊢ₑ v ⟿ ⟨ α ⟩}.
+  \texttt{e ⊢ v ⟿ ⟨ α ⟩}.
 \end{prop}
 \begin{proof}
   It follows from Requirement \ref{req:diff-specs} and Proposition
@@ -1280,7 +1323,7 @@ Then either \texttt{f ∈ e₃} or there is a conflict \texttt{c} such that
     depth first traversal.
 
 \begin{minted}{agda}
-data _⊢_⊏_ : Hist xs → F as a → F bs b → Set where
+data _⊢_⊏_ : Hist xs → C as a → C bs b → Set where
   here : β ∈ (hs₁ +++ hs₂) → Node α hs₁ ∷ hs₂ ⊢ α ⊏ β
   there : (hs₁ +++ hs₂) ⊢ α ⊏ β → Node γ hs₁ ∷ hs₂ ⊢ α ⊏ β
 \end{minted}
@@ -1296,7 +1339,7 @@ data _⊢_⊏_ : Hist xs → F as a → F bs b → Set where
 
 \begin{definition}[Edit Order]
 Given an edit script \texttt{e} and two edits \texttt{f} and \texttt{g}, we write
-\texttt{e ⊢ₑ f ⊏ g} if and only if \texttt{f} precedes \texttt{g} in \texttt{e}.
+\texttt{e ⊢ f ⊏ g} if and only if \texttt{f} precedes \texttt{g} in \texttt{e}.
 \end{definition}
 
 \paragraph{Order Invariant}
@@ -1406,13 +1449,13 @@ the original order in the merged script.
 %
   Let \texttt{f} and \texttt{g} be edits of type \texttt{u ⟿ v} and
   \texttt{w ⟿ z} such that \texttt{u ≢ v}, \texttt{w ≢ z} and
-  \texttt{e₁ ⊢ f ⊏ g}, then \texttt{e₃ ⊢ₑ f ⊏ g}.
+  \texttt{e₁ ⊢ f ⊏ g}, then \texttt{e₃ ⊢ f ⊏ g}.
 \end{thm}
   The theorem holds also with respect to the edits contained in \texttt{e₂}.
 
 \section{Haskell}
 \label{sec:haskell}
-In this section we implement our generic algorithm in Haskell.  The
+In this section, we implement our generic algorithm in Haskell.  The
 main reason to use Haskell over Agda is performance. 
 %
 Even though it does not feature full-fledged dependent types, the
@@ -1425,7 +1468,7 @@ We will point out the shortcomings compared to the original version.
 %
 
 \subsection{Data  Representation}
-In our model we used the abstract representation \texttt{F as a}
+In our model we used the abstract representation \texttt{C as a}
 for a constructor of the algebraic data type \texttt{a} which takes
 arguments \texttt{as}.
 %
@@ -1438,11 +1481,11 @@ the type of its arguments and the second with the resulting type.
 %
 For instance we encode the list constructors:
 \begin{minted}{haskell}
-data ListF (as :: [ * ]) (a :: *) where
-  Nil :: ListF '[] [a]
-  Cons :: ListF '[a , [a]] [a]
+data ListC (as :: [ * ]) (a :: *) where
+  Nil :: ListC '[] [a]
+  Cons :: ListC '[a , [a]] [a]
 \end{minted}
-In Haskell lists are automatically lifted to the type level and they
+In Haskell, lists are automatically lifted to the type level and they
 both share the same syntax, hence we put a tick to distinguish lifted
 lists of kind \texttt{[ * ]} from the list type of kind \texttt{*}.
 %
@@ -1450,8 +1493,8 @@ Primitive types such as integer are also encoded in a similar data
 type, but since they may assume many values, they are all combined in
 a single constructor that takes the original value.
 \begin{minted}{haskell}
-data IntF xs a where
-  I :: Int → IntF '[] Int
+data IntC xs a where
+  I :: Int → IntC '[] Int
 \end{minted}
 
 \subsection{Diffing}
@@ -1460,19 +1503,18 @@ for types that can be diffed.
 
 \begin{minted}{haskell}
 class Typeable a => Diff a where
-  type FamilyOf a :: [ * ] → * → *
+  type Encoding a :: [ * ] → * → *
   toHTree :: a → HTree a
   fromHTree :: HTree a → a
-  (=?=) :: F xs a → F ys a → Maybe (xs :~: ys)
-  distance :: F xs a → F ys a → Double
+  (=?=) :: C xs a → C ys a → Maybe (xs :~: ys)
+  distance :: C xs a → C ys a → Double
 \end{minted}
-\todo{Better name for FamilyOf. It is not per family but per type}
-The associated type family \texttt{FamilyOf a} returns the concrete
-data type that represents the constructors of \texttt{a}.
+The associated type family \texttt{Encoding a} returns the concrete
+data type that encodes the constructors of \texttt{a}.
 %
 The type synonym \texttt{F} is used to improve readability of signatures:
 \begin{minted}{haskell}
-type F xs a = (FamilyOf a) xs a
+type C xs a = (Encoding a) xs a
 \end{minted}
 \todo{You can also do it with another type class parameter and functional 
 dependencies but it is worse in end.}
@@ -1490,7 +1532,7 @@ data HList xs where
   HCons :: Diff a => HTree a → HList as → HList (a : as)
 
 data HTree a where
-  Node :: F as a → HList as → HTree a
+  Node :: C as a → HList as → HTree a
 \end{minted}
 
 This definition automatically ensures that the whole family of mutually recursive 
@@ -1515,7 +1557,7 @@ of the same data type.
 The following function uses \texttt{eqT} from the \texttt{Typeable} superclass
 of \texttt{Diff} for that:
 \begin{minted}{haskell}
-(=??=) :: (Diff a, Diff b) => F xs a → F ys b → Maybe (a :~: b)
+(=??=) :: (Diff a, Diff b) => C xs a → C ys b → Maybe (a :~: b)
 _ =??= _ = eqT
 \end{minted}
 Note that the arguments are ignored and used exclusively to fix which
@@ -1529,7 +1571,7 @@ which alone allow to diff CSV tables, like those in the initial example.
 
 \begin{minted}{haskell}
 instance Diff a => Diff [a] where	
-  type FamilyOf [a] = ListF
+  type Encoding [a] = ListF
 
   Nil =?= Nil = Just Refl
   Cons =?= Cons = Just Refl
@@ -1549,7 +1591,7 @@ with both \texttt{[Int]} and \texttt{[[Int]]}.
 
 \begin{minted}{haskell}
 instance Diff Int where
-  type FamilyOf Int = IntF
+  type Encoding Int = IntF
 
   (I x) =?= (I y) = if x == y then Just Refl else Nothing
   
@@ -1568,9 +1610,9 @@ embedded in its constructors.
 \begin{minted}{haskell}
 data ES xs ys where
   End :: ES [] []
-  Ins :: Diff a => F xs a → ES ys (xs :++: zs) → ES ys (a ': zs)
-  Del :: Diff a => F xs a → ES (xs :++: ys) zs → ES (a ': ys) zs
-  Upd :: Diff a => F xs a → F ys a → ES (xs :++: zs) (ys :++: ws) 
+  Ins :: Diff a => C xs a → ES ys (xs :++: zs) → ES ys (a ': zs)
+  Del :: Diff a => C xs a → ES (xs :++: ys) zs → ES (a ': ys) zs
+  Upd :: Diff a => C xs a → C ys a → ES (xs :++: zs) (ys :++: ws) 
       → ES (a ': zs) (a ': ws)
 \end{minted}
 The original version cannot be translated directly to Haskell as it
@@ -1649,7 +1691,7 @@ e₁ ⨅ e₂ = if cost e₁ ≤ cost e₂ then e₁ else e₂
 We show a short, yet naive, version of the \texttt{diff} algorithm for simplicity,
 furthermore we extend list syntax to heterogeneous lists for clarity:
 \begin{minted}{haskell}
-diff : DList as → DList bs → ES as bs
+diff : HList as → HList bs → ES as bs
 diff [] [] = End
 diff [] (Node β ys₁ ∷ ys₂) = Ins β $ diff [] (ys₁ +++ ys₂)
 diff (Node α xs₁ ∷ xs₂) [] = Del α $ diff (xs₁ +++ xs₂) []
@@ -1707,10 +1749,10 @@ script.
 The conflict data type encodes why it is not possible to merge two edits:
 \begin{minted}{haskell}
 data Conflict where
-  InsIns :: (Diff a, Diff b) => F xs a → F ys b → Conflict
-  UpdDel :: Diff a => F xs a → F ys a → Conflict
-  DelUpd :: Diff a => F xs a → F ys a → Conflict
-  UpdUpd :: Diff a => F xs a → F ys a → F zs a → Conflict
+  InsIns :: (Diff a, Diff b) => C xs a → C ys b → Conflict
+  UpdDel :: Diff a => C xs a → C ys a → Conflict
+  DelUpd :: Diff a => C xs a → C ys a → Conflict
+  UpdUpd :: Diff a => C xs a → C ys a → C zs a → Conflict
 \end{minted}
 
 The data type is much simpler compared to the model: it is not indexed
@@ -1724,9 +1766,9 @@ may contain conflicts.
 data ES3 xs where
   End3 :: ES3 '[] 
   Cnf3 :: Conflict → ES3 xs → ES3 ys
-  Ins3 :: Diff a => F xs a → ES3 ys → ES3 ys
-  Del3 :: Diff a => F xs a → ES3 (xs :++: ys) → ES3 (a ': ys) 
-  Upd3 :: Diff a => F xs a → F ys a 
+  Ins3 :: Diff a => C xs a → ES3 ys → ES3 ys
+  Del3 :: Diff a => C xs a → ES3 (xs :++: ys) → ES3 (a ': ys) 
+  Upd3 :: Diff a => C xs a → C ys a 
          → ES3 (xs :++: zs) → ES3 (a ': zs) 
 \end{minted}
 The script is well-typed with respect to the input list simplifying
@@ -1747,7 +1789,7 @@ be handled explicitly.
 The following auxiliary functions tests equality between nodes
 and throws an error if this is not the case.
 \begin{minted}{haskell}
-aligned :: (Diff a, Diff b) => F xs a → F ys b → (xs :~: ys , a :~: b)
+aligned :: (Diff a, Diff b) => C xs a → C ys b → (xs :~: ys , a :~: b)
 aligned a b =
   case a =??= b of
     Just Refl →  
